Fix vertical spacing on list and body

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+body {margin: 0;}
 header {background-color: pink;}
 main {background-color: blue;}
 footer {background-color: yellow;}
+ul {margin: 0;}
